; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_wolfssl.c_aes_unwrap.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/crypto/extr_crypto_wolfssl.c_aes_unwrap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @aes_unwrap(i32* %0, i64 %1, i32 %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i64 %1, i64* %8, align 8
  store i32 %2, i32* %9, align 4
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %13 = call i64 (...) @TEST_FAIL()
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  br label %33

16:                                               ; preds = %5
  %17 = load i32*, i32** %7, align 8
  %18 = load i64, i64* %8, align 8
  %19 = load i32*, i32** %10, align 8
  %20 = load i32, i32* %9, align 4
  %21 = add nsw i32 %20, 1
  %22 = mul nsw i32 %21, 8
  %23 = load i32*, i32** %11, align 8
  %24 = load i32, i32* %9, align 4
  %25 = mul nsw i32 %24, 8
  %26 = call i32 @wc_AesKeyUnWrap(i32* %17, i64 %18, i32* %19, i32 %22, i32* %23, i32 %25, i32* null)
  store i32 %26, i32* %12, align 4
  %27 = load i32, i32* %12, align 4
  %28 = load i32, i32* %9, align 4
  %29 = mul nsw i32 %28, 8
  %30 = icmp ne i32 %27, %29
  %31 = zext i1 %30 to i64
  %32 = select i1 %30, i32 -1, i32 0
  store i32 %32, i32* %6, align 4
  br label %33

33:                                               ; preds = %16, %15
  %34 = load i32, i32* %6, align 4
  ret i32 %34
}

declare dso_local i64 @TEST_FAIL(...) #1

declare dso_local i32 @wc_AesKeyUnWrap(i32*, i64, i32*, i32, i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
